--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,10 @@ address{
 .navbar-dark {
     color : #0f0f0f;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 20px;
+}
