--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,26 @@ address{
     border-bottom: 1px solid #ddd;
     padding: 20px;
 }
+
+.carousel {
+    background:black;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+
+.container-fluid {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
