--- a/css/style.css
+++ b/css/style.css
@@ -66,4 +66,11 @@ address{
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-  }
+}
+
+#carouselbtngroup {
+    right : 0px;
+    bottom: 0px;
+    position: absolute;
+    z-index: 1;
+}
