Pause button only

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ address{
     margin-left: auto;
 }
 
-#carouselbtngroup {
+#carouselbutton {
     right : 0px;
     bottom: 0px;
     position: absolute;
