--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,64 @@
-body{
-    padding:50px 0px 0px 0px;
-    z-index:0;
+.row-header {
+  margin: 0px auto;
+  padding: 0px 0px;
 }
-
-.row-header{
-    margin:0px auto;
-    padding:0px;
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0;
 }
-
 .row-content {
-    margin:0px auto;
-    padding: 70px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height:400px;
+  margin: 0px auto;
+  padding: 70px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
-
-.footer{
-    background-color: #7086eb;
-    margin:0px auto;
-    padding: 20px 0px 20px 0px;
+.footer {
+  background-color: #7086eb;
+  margin: 0px auto;
+  padding: 20 0;
 }
-
 .jumbotron {
-    padding:70px 30px 70px 30px;
-    margin:0px auto;
-    background: #7086eb ;
-    color:floralwhite;
+  margin: 0px auto;
+  padding: 70 30;
+  background: #7086eb;
+  color: floralwhite;
 }
-
-address{
-    font-size:80%;
-    margin:0px;
-    color:#0f0f0f;
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
-
 .navbar-dark {
-    color : #0f0f0f;
+  color: #0f0f0f;
 }
-
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 20px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 20px;
 }
-
 .carousel {
-    background:black;
+  background: #0f0f0f;
 }
-
-.carousel-item {
+.carousel .carousel-item {
   height: 300px;
 }
-
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
 }
-
 .container-fluid {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
-
 #carouselbutton {
-    right : 0px;
-    bottom: 0px;
-    position: absolute;
-    z-index: 1;
+  right: 0px;
+  bottom: 0px;
+  position: absolute;
+  z-index: 1;
 }
