--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,54 @@
 .row-header {
   margin: 0px auto;
-  padding: 0px 0px;
-}
-body {
-  padding: 50px 0px 0px 0px;
-  z-index: 0;
-}
+  padding: 0px 0px; }
+
 .row-content {
   margin: 0px auto;
-  padding: 70px 0px 50px 0px;
+  padding: 50px 0px;
   border-bottom: 1px ridge;
-  min-height: 400px;
-}
+  min-height: 400px; }
+
 .footer {
   background-color: #7086eb;
   margin: 0px auto;
-  padding: 20 0;
-}
+  padding: 20px 0px; }
+
 .jumbotron {
   margin: 0px auto;
-  padding: 70 30;
+  padding: 70px 30px;
   background: #7086eb;
-  color: floralwhite;
-}
+  color: floralwhite; }
+
 address {
   font-size: 80%;
   margin: 0px;
-  color: #0f0f0f;
-}
+  color: #0f0f0f; }
+
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0; }
+
 .navbar-dark {
-  color: #0f0f0f;
-}
+  background-color: black; }
+
 .tab-content {
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  padding: 20px;
-}
+  padding: 10px; }
+
 .carousel {
-  background: #0f0f0f;
-}
-.carousel .carousel-item {
-  height: 300px;
-}
-.carousel .carousel-item img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 300px;
-}
-.container-fluid {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
+  background: black; }
+  .carousel .carousel-item {
+    height: 300px; }
+    .carousel .carousel-item img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-height: 300px; }
+
 #carouselbutton {
   right: 0px;
-  bottom: 0px;
   position: absolute;
-  z-index: 1;
-}
+  bottom: 0px;
+  z-index: 1; }
