--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@ $background-pale : #7086eb;
 $background-dark: black;
 $background-light: #7086eb;
 $lt-gray: #ddd;
+$header-color : rgb(25, 162, 216);
 
 
 @mixin zero-margin($pad-up-dn, $pad-left-right) {
@@ -73,4 +74,19 @@ body{
     position: absolute;
     bottom: 0px;
     z-index: 1;
+}
+
+
+.modal {
+    .modal-header {
+        background-color: rgb(25, 162, 216);
+        color:$lt-gray;
+      }
+    .modal-body {
+        background-color: $background-pale;
+        padding: 15px;
+      }
+    .btn .btn-secondary {
+        color: $lt-gray;
+    }
 }
