--- a/fuchion/src/app/app.component.html
+++ b/fuchion/src/app/app.component.html
@@ -1,81 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
-  <div class="container">
-
-     <a class="navbar-brand" href="#">
-      <img src="assets/img/logo.png" class="d-flex mr-auto img-fluid" height="20" width="40">
-  </a>
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="Navbar">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-              <li class="nav-item"><a class="nav-link" class="btn btn-primary" role="button" id="navloginbutton"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
-
-          </ul>
-      </div>
-
-  </div>
-</nav>
-<div id="loginmodal" class="modal fade" role="dialog">
-
-  <div class="modal-dialog modal-lg" role="content">
-      <div class="modal-content" >
-          <div class="modal-header ">
-              <h4 class="modal-title">Login</h4>
-              <button class="close" type="button" data-dismiss="modal">&times;</button>
-          </div>
-          <div class="modal-body align-content-center">
-              <form>
-                  <div class="form-group ">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                  </div>
-                  <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                  </div>
-                  <div class="form-group text-center">
-                  <button type="submit" class="btn btn-secondary">Cancel</button>
-
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                  </div>
-
-                </form>
-          </div>
-      </div>
-  </div>
-
-</div>
-<header class="jumbotron">
-  <div class="container">
-      <div class="row row-header">
-          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-              <h1>Ristorante con Fusion</h1>
-              <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-          </div>
-          <div class="col-12 col-sm-3 col-md-3 col-lg-3 align-self-center text-center">
-              <img src="assets/img/logo.png" class="  img-fluid">
-          </div>
-          <div class="col-12 col-sm col-md col-lg align-self-center text-center">
-              <a class="btn btn-primary text-center" style="padding-left: 50px;padding-right: 50px;" role="button"
-               id="reservetablebutton">Reserve Table</a>
-          </div>
-
-      </div>
-  </div>
-</header>
 
 
+<app-header></app-header>
 <div class="container-fluid">
 
   <div class="row row-content">
@@ -187,185 +113,6 @@
       </div>
   </div>
 </div>
-<div id="reservetable0" class="modal fade " role="dialog">
-  <div class="modal-dialog modal-lg "  role="content">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h1 class="modal-title text-center">Reserveation</h1>
-              <button class="close" type="button" data-dismiss="modal">&times;</button>
+<app-modal-reserve></app-modal-reserve>
 
-          </div>
-          <div class="modal-body">
-              <form>
-                  <div class="form-group row">
-                      <label for="numberg" class="col-12 col-sm-4 col-form-label" >Number of Guests</label>
-                      <div class="col-12 col-sm-8 ">
-                          <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1">
-                              <label class="form-check-label" for="inlineRadio1">1</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2">
-                              <label class="form-check-label" for="inlineRadio2">2</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="3">
-                              <label class="form-check-label" for="inlineRadio2">3</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="4">
-                              <label class="form-check-label" for="inlineRadio2">4</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="5">
-                              <label class="form-check-label" for="inlineRadio2">5</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="4">
-                              <label class="form-check-label" for="inlineRadio3">6</label>
-                            </div>
-
-                      </div>
-                  </div>
-                  <div class="form-group row">
-                      <label for="reservetionoption" class="col-12 col-sm-4 col-form-label">Sections </label>
-                      <div class="btn-group btn-group-toggle col-12 col-sm-4 " role="group">
-                          <label class="btn btn-success active">
-                         <input type="radio" name="section" value="0" >NoSmoking
-                      </label>
-                      <label class="btn btn-danger ">
-
-                          <input type="radio" name="section" value="1" >Smoking
-                      </label>
-
-                      </div>
-
-                  </div>
-
-                  <div class="form-group row">
-                      <label for="datatime" class="col-12 col-sm-4 col-form-label" >Date And Times</label>
-                      <div class="col-6 col-sm-4">
-                          <input class="form-control datepicker" type="date" placeholder="Date">
-                      </div>
-                      <div class="col-6 col-sm-4">
-                          <input class="form-control" type="time" placeholder="Time">
-                      </div>
-                  </div>
-                  <div class="form-group row text-center justify-content-center ">
-
-                      <div class="col-md-9  text-center">
-                          <button type="button" class="btn btn-secondary  ml-auto" data-dismiss="modal">Cancel</button>
-
-                          <button type="submit" class="btn btn-primary ml-auto">Reserve</button>
-                      </div>
-
-                  </div>
-              </form>
-          </div>
-      </div>
-  </div>
-</div>
-<!--
-<div class="container" id="reservetable">
-  <div class="row row-content   justify-content-center">
-      <div class="col-8">
-          <div class="card">
-              <h3 class="card-header text-center bg-primary text-white">Reserve a Table </h3>
-              <div class="card-body">
-                  <form>
-                      <div class="form-group row">
-                          <label for="numberg" class="col-12 col-sm-4 col-form-label" >Number of Guests</label>
-                          <div class="col-12 col-sm-8 ">
-                              <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1">
-                                  <label class="form-check-label" for="inlineRadio1">1</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2">
-                                  <label class="form-check-label" for="inlineRadio2">2</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="3">
-                                  <label class="form-check-label" for="inlineRadio2">3</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="4">
-                                  <label class="form-check-label" for="inlineRadio2">4</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="5">
-                                  <label class="form-check-label" for="inlineRadio2">5</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="4">
-                                  <label class="form-check-label" for="inlineRadio3">6</label>
-                                </div>
-
-                          </div>
-                      </div>
-                      <div class="form-group row">
-                          <label for="datatime" class="col-12 col-sm-4 col-form-label" >Date And Times</label>
-                          <div class="col-6 col-sm-4">
-                              <input class="form-control datepicker" type="date" placeholder="Date">
-                          </div>
-                          <div class="col-6 col-sm-4">
-                              <input class="form-control" type="time" placeholder="Time">
-                          </div>
-                      </div>
-                      <div class="form-group row text-center justify-content-center ">
-
-                          <div class="col-md-9  text-center">
-                              <button type="submit" class="btn btn-primary ml-auto">Reserve Table</button>
-                          </div>
-
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
--->
-<footer class="footer">
-  <div class="container">
-      <div class="row">
-          <div class="col-4 col-sm-2 offset-1 align-self-center">
-              <h5>Links</h5>
-              <ul class="list-unstyled navbar-nav">
-                  <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                  <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-              </ul>
-          </div>
-          <div class="col-7 col-sm-5 align-self-center">
-              <h5>Our Address</h5>
-              <address>
-            121, Clear Water Bay Road<br>
-            Clear Water Bay, Kowloon<br>
-            HONG KONG<br>
-            Tel.: <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-            Fax: <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-            Email: <i class="fa fa-envelope fa-lg"></i>:
-                <a href="mailto:confusion@food.net">confusion@food.net</a>
-         </address>
-          </div>
-          <div class="col-12 col-sm-4 align-self-center">
-              <div class="text-center">
-                  <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
-                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                  <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
-              </div>
-          </div>
-     </div>
-     <div class="row justify-content-center">
-          <div class="col-auto">
-              <p>© Copyright 2018 Ristorante Con Fusion</p>
-          </div>
-     </div>
-  </div>
-</footer>
-
+<app-footer></app-footer>
