Altering app componentes

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 $carousel-item-height: 300px;
-$background-pale : #7086eb;
+$background-pale : #ddd;
 $background-dark: black;
-$background-light: #7086eb;
+$background-light:#ddd;
 $lt-gray: #ddd;
 $header-color : rgb(25, 162, 216);
 
