--- a/fuchion/src/app/app.component.html
+++ b/fuchion/src/app/app.component.html
@@ -61,55 +61,39 @@
 <div class="container">
 
   <div class="row row-content align-items-center">
-      <div class="col-12 col-sm-4  col-md-4 order-sm-last" >
-          <h3>Our Lipsmacking Culinary Creations</h3>
+      <div class="col-12 col-sm-6  col-md-6 order-sm-last" >
+          <h3>Lorem Ipsum</h3>
+          <p class="font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
       </div>
       <div class="col-12  col-sm  order-sm-first">
-          <div class="media">
-              <img src="assets/img/uthappizza.png" class="img-fluid d-flex mr-2 mt-4" alt="uthappizza">
-              <div class="media-body">
-                  <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                  <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-              </div>
-          </div>
+              <img src="assets/img/resturant image.jpg" class="img-fluid" alt="uthappizza">
+
 
       </div>
   </div>
 
 
   <div class="row row-content align-items-center">
-      <div class="col-12 col-sm-4 col-md-4 ">
-          <h3>This Month's Promotions</h3>
+      <div class="col-12 col-sm-6 col-md-6 ">
+          <h3>Lorem Ipsum</h3>
+          <p class="font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+
       </div>
       <div class="col-12 col-sm">
-          <div class="media">
-              <div class="media-body">
-                  <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                  <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-              </div>
-              <img src="assets/img/buffet.png" class="img-fluid d-flex mr-2 mt-4" alt="buffet" >
-
-          </div>
+            <img src="assets/img/desserts-restorant.jpg" class="img-fluid d-flex mr-2 mt-4" alt="buffet" >
 
       </div>
   </div>
 
   <div class="row row-content align-items-center">
       <div class="col-12 col-sm-4 col-md-4 order-sm-last ">
-          <h3>Meet our Culinary Specialists</h3>
+          <h3>Lorem Ipsum</h3>
+          <p class="font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum </p>
       </div>
       <div class="col-12 col-sm order-sm-first">
 
-         <div class="media">
+              <img src="assets/img/our resturant.jpg" class="img-fluid d-flex mr-2 mt-4">
 
-              <img src="assets/img/alberto.png" class="img-fluid d-flex mr-2 mt-4">
-              <div class="media-body">
-                  <h2 class="mt-0">Alberto Somayya</h2>
-                  <h4>Executive Chef</h4>
-                  <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-              </div>
-
-         </div>
       </div>
   </div>
 </div>
