--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@
   min-height: 400px; }
 
 .footer {
-  background-color: #7086eb;
+  background-color: #ddd;
   margin: 0px auto;
   padding: 20px 0px; }
 
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #7086eb;
+  background: #ddd;
   color: floralwhite; }
 
 address {
@@ -58,7 +58,7 @@ body {
   color: #ddd; }
 
 .modal .modal-body {
-  background-color: #7086eb;
+  background-color: #ddd;
   padding: 15px; }
 
 .modal .btn .btn-secondary {
