--- a/fuchion/src/app/header/header.component.html
+++ b/fuchion/src/app/header/header.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
+<nav class="navbar navbar-dark navbar-expand-sm bg-secondary fixed-top">
   <div class="container">
 
      <a class="navbar-brand" href="#">
-      <img src="assets/img/logo.png" class="d-flex mr-auto img-fluid" height="20" width="40">
+      <img src="assets/img/restorant-logo.png" class="d-flex mr-auto img-fluid " height="35px" width="45">
   </a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
       <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,7 @@
               <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
               <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
               <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-              <li class="nav-item"><a class="nav-link" class="btn btn-primary" role="button" id="navloginbutton"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
+              <li class="nav-item"><a class="nav-link"  role="button" id="navloginbutton"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
 
           </ul>
       </div>
@@ -22,19 +22,29 @@
 </nav>
 
 <header class="jumbotron">
-  <div class="container">
+  <div class="container ">
       <div class="row row-header">
-          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-              <h1>Ristorante con Fusion</h1>
-              <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+          <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-last order-md-first">
+            <div>
+              <h1>Ristorante Hilton</h1>
+              <h6>We take inspiration from the greatest chefs in the world ! </h6>
+              <div class="btn text-center">
+                <a class="btn btn-secondary btn-lg text-center"  role="button"
+                 id="reservetablebutton"><span class="fa fa-calendar-check-o"></span> Reserve Table</a>
+
+              </div>
+              <div class="btn text-center">
+                <a class="btn btn-secondary btn-lg text-center"  role="button"
+                 id="contactbutton"><span class="	fa fa-envelope-open-o"></span> Contact Us</a>
+              </div>
+
+
           </div>
-          <div class="col-12 col-sm-3 col-md-3 col-lg-3 align-self-center text-center">
-              <img src="assets/img/logo.png" class="  img-fluid">
+        </div>
+          <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch  hero-img order-first order-md-last">
+              <img src="assets/img/restorant-jumbotron-removebg-preview.png" class=" img-fluid" >
           </div>
-          <div class="col-12 col-sm col-md col-lg align-self-center text-center">
-              <a class="btn btn-primary text-center" style="padding-left: 50px;padding-right: 50px;" role="button"
-               id="reservetablebutton">Reserve Table</a>
-          </div>
+
 
       </div>
   </div>
