--- a/fuchion/src/app/app.component.html
+++ b/fuchion/src/app/app.component.html
@@ -2,60 +2,8 @@
 
 
 <app-header></app-header>
-<div class="container-fluid">
 
-  <div class="row row-content">
-      <div class="col">
-          <div id="mycarousel" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
-                      <img class="d-block img-fluid"
-                          src="assets/img/uthappizza.png" alt="Uthappizza">
-                      <div class="carousel-caption d-none d-md-block">
-                          <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-                          <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                         <img class="d-block img-fluid"
-                         src="assets/img/buffet.png">
-                         <div class="carousel-caption d-none d-md-block">
-                              <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                              <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                          </div>
 
-                  </div>
-                  <div class="carousel-item">
-                      <img class="d-block img-fluid"
-                      src="assets/img/alberto.png">
-                      <div class="carousel-caption d-none d-md-block">
-                              <h4>Executive Chef</h4>
-                              <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                      </div>
-
-                  </div>
-              </div>
-              <ol class="carousel-indicators">
-                  <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#mycarousel" data-slide-to="1"></li>
-                  <li data-target="#mycarousel" data-slide-to="2"></li>
-                </ol>
-                <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-                  <button class="btn btn-danger btn-sm" id="carouselbutton">
-                      <span class="fa fa-pause"></span>
-                  </button>
-          </div>
-
-      </div>
-  </div>
-</div>
 
 
 <div class="container">
@@ -98,5 +46,6 @@
   </div>
 </div>
 <app-modal-reserve></app-modal-reserve>
+<app-casouel></app-casouel>
 
 <app-footer></app-footer>
