--- a/fuchion/src/app/header/header.component.html
+++ b/fuchion/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark navbar-expand-sm bg-secondary fixed-top">
   <div class="container">
 
-     <a class="navbar-brand" href="#">
+     <a class="navbar-brand" routerLink='/home'>
       <img src="assets/img/restorant-logo.png" class="d-flex mr-auto img-fluid " height="35px" width="45">
   </a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -9,10 +9,10 @@
       </button>
       <div class="collapse navbar-collapse " id="Navbar">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink='/home' routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink='/aboutus' routerLinkActive="active"><span class="fa fa-info fa-lg"></span> About</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink='/menu' routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink='/contactus' routerLinkActive="active"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
               <li class="nav-item"><a class="nav-link"  role="button" id="navloginbutton"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
 
           </ul>
