--- a/fuchion/src/app/home/home.component.html
+++ b/fuchion/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="container">
 
-  <div class="row row-content align-items-center fade show">
-      <div class="col-12 col-sm-6  col-md-6 order-sm-last" >
+  <div class="row row-content align-items-center fade show" >
+      <div class="col-12 col-sm-6  col-md-6 order-sm-last" data-aos="fade-up" >
           <h3>Lorem Ipsum</h3>
           <p class="font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
       </div>
-      <div class="col-12  col-sm  order-sm-first">
+      <div class="col-12  col-sm  order-sm-first" data-aos="fade-up-right">
               <img src="assets/img/resturant image.jpg" class="img-fluid" alt="uthappizza">
 
 
@@ -13,24 +13,24 @@
   </div>
 
 
-  <div class="row row-content align-items-center">
-      <div class="col-12 col-sm-6 col-md-6 ">
+  <div class="row row-content align-items-center" >
+      <div class="col-12 col-sm-6 col-md-6 " data-aos="fade-up">
           <h3>Lorem Ipsum</h3>
           <p class="font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 
       </div>
-      <div class="col-12 col-sm">
+      <div class="col-12 col-sm" data-aos="fade-up-left">
             <img src="assets/img/desserts-restorant.jpg" class="img-fluid d-flex mr-2 mt-4" alt="buffet" >
 
       </div>
   </div>
 
   <div class="row row-content align-items-center">
-      <div class="col-12 col-sm-4 col-md-4 order-sm-last ">
+      <div class="col-12 col-sm-4 col-md-4 order-sm-last " data-aos="fade-up">
           <h3>Lorem Ipsum</h3>
           <p class="font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum </p>
       </div>
-      <div class="col-12 col-sm order-sm-first">
+      <div class="col-12 col-sm order-sm-first" data-aos="fade-up-right">
 
               <img src="assets/img/our resturant.jpg" class="img-fluid d-flex mr-2 mt-4">
 
