--- a/fuchion/src/assets/css/style.css
+++ b/fuchion/src/assets/css/style.css
@@ -68,3 +68,25 @@ body {
 footer a {
   color : black;
 }
+
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+  border : 1px solid black;
+  transform: scale(1.01);
+
+}
