--- a/fuchion/src/app/menu/menu.component.html
+++ b/fuchion/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" data-aos="fade-down">
   <div class="row row-content">
     <div class="col-12">
         <ul class="nav nav-tabs nav-justified" role="tablist">
