--- a/fuchion/src/app/menuitems/menuitems.component.css
+++ b/fuchion/src/app/menuitems/menuitems.component.css
@@ -1,13 +1,7 @@
 .card-img-top {
-  width: 100%;
-  height: 30vw;
-  object-fit: cover;
-}
-
-
-.card {
-  margin: 3px;
-  align-self: center;
+    width:100%;
+    height: 30vw;
+    object-fit: cover;
 }
 .card-body {
   align-self: center;
@@ -16,4 +10,69 @@
   font-family: monospace;
   padding: 40px;
   background-color: #ddd;
+
+
+}
+  /* Small devices (landscape phones, 576px and up) */
+  @media (min-width: 576px) {
+    .card-img-top {
+        width:100%;
+        height: 19vw;
+    }
+    .card-body {
+      height: 19vw;
+    }
+  }
+  /* Medium devices (tablets, 768px and up) */
+  @media (min-width: 768px) {
+    .card-img-top {
+        width:100%;
+        height: 16vw;
+    }
+    .card-body {
+      height: 16vw;
+    }
+  }
+  /* Large devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    .card-img-top {
+        width:100%;
+        height: 20vw;
+    }
+    .card-body {
+      height: 20vw;
+    }
+  }
+  /* Extra large devices (large desktops, 1200px and up) */
+  @media (min-width: 992px) {
+    .card-img-top {
+        width:100%;
+        height: 20vw;
+    }
+    .card-body {
+      height: 20vw;
+    }
+  }
+
+
+.card {
+  margin: 3px;
+  align-self: center;
+}
+
+.card-link {
+  z-index : 0;
+  opacity : 0;
+  display : none;
+}
+
+.card:hover {
+  z-index : 0;
+  opacity : 0.3;
+}
+.card:hover .card-link{
+  z-index: 1;
+  opacity : 1;
+  text-align: center;
+  display : block;
 }
