--- a/fuchion/src/app/menuitems/menuitems.component.html
+++ b/fuchion/src/app/menuitems/menuitems.component.html
@@ -1,5 +1,10 @@
 <div class="card-group ">
-  <div class="card" data-aos="fade-up">
+
+  <div class="flip-card" data-aos="fade-up">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <div class="card" data-aos="fade-up">
+
     <img class="card-img-top" data-aos="fade-right" src="assets/img/Brochettes.jpg" alt="Card image cap">
 
     <div class="card-body text-center align-self-center">
@@ -9,6 +14,33 @@
 
     </div>
   </div>
+</div>
+  <div class="flip-card-back">
+    <div class="card bg-secondary">
+      <div class="card-img-top text-center">
+        <h1 class="card-title">PRICE</h1>
+        <p class="card-text">$4.99</p>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <a role="button" class="btn btn-primary btn-lg"><i class="fa fa-external-link" aria-hidden="true"></i> More Details</a>
+
+        <div class="btn-group">
+        <a role="button" class="btn btn-primary"><span class="fa fa-calendar-check-o"></span> Reserve</a>
+        <p class="card-text">  </p>
+
+        <a role="button" class="btn btn-primary"><span class="fa fa-envelope-open-o"></span> Contact</a>
+      </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+
   <div class="card" data-aos="fade-up">
     <img class="card-img-top" src="assets/img/pates.jpg" data-aos="fade-right"  alt="Card image cap">
     <div class="card-body text-center align-self-center">
