--- a/fuchion/src/app/fooddetail/fooddetail.component.css
+++ b/fuchion/src/app/fooddetail/fooddetail.component.css
@@ -136,94 +136,101 @@ a {
   border: 1px solid black;
 }
 
-/*
-    Image credits:
-    uifaces.com (http://uifaces.com/authorized)
-*/
+.media {
+  width : 100%;
+  padding: 15px;
+  margin : 0px;
+  text-align: start;
+}
 
-#login { display: none; }
-.login,
-.logout {
-    position: absolute;
-    top: -3px;
-    right: 0;
+.media img {
+  width : 100px;
+  height: 100px;
 }
-.page-header { position: relative; }
-.reviews {
-    color: #555;
-    font-weight: bold;
-    margin: 10px auto 20px;
-}
-.notes {
-    color: #999;
-    font-size: 12px;
-}
-.media .media-object { max-width: 120px; }
-.media-body { position: relative; }
-.media-date {
-    position: absolute;
-    right: 25px;
-    top: 25px;
-}
-.media-date li { padding: 0; }
-.media-date li:first-child:before { content: ''; }
-.media-date li:before {
-    content: '.';
-    margin-left: -2px;
-    margin-right: 2px;
-}
-.media-comment { margin-bottom: 20px; }
-.media-replied { margin: 0 0 20px 50px; }
-.media-replied .media-heading { padding-left: 6px; }
 
-.btn-circle {
-    font-weight: bold;
-    font-size: 12px;
-    padding: 6px 15px;
-    border-radius: 20px;
+
+body{
+  margin-top:20px;
+  background-color:#e9ebee;
 }
-.btn-circle span { padding-right: 6px; }
-.embed-responsive { margin-bottom: 20px; }
-.tab-content {
-    padding: 50px 15px;
-    border: 1px solid #ddd;
-    border-top: 0;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
+
+.be-comment-block {
+  margin-bottom: 50px !important;
+  border: 1px solid #edeff2;
+  border-radius: 2px;
+  padding: 50px 70px;
+  border:1px solid #ffffff;
 }
-.custom-input-file {
-    overflow: hidden;
-    position: relative;
-    width: 120px;
-    height: 120px;
-    background: #eee url('https://s3.amazonaws.com/uifaces/faces/twitter/walterstephanie/128.jpg');
-    background-size: 120px;
-    border-radius: 120px;
+
+.comments-title {
+  font-size: 16px;
+  color: #262626;
+  margin-bottom: 15px;
+  font-family: 'Conv_helveticaneuecyr-bold';
 }
-input[type="file"]{
-    z-index: 999;
-    line-height: 0;
-    font-size: 0;
-    position: absolute;
-    opacity: 0;
-    filter: alpha(opacity = 0);-ms-filter: "alpha(opacity=0)";
-    margin: 0;
-    padding:0;
-    left:0;
+
+.be-img-comment {
+  width: 60px;
+  height: 60px;
+  float: left;
+  margin-bottom: 15px;
 }
-.uploadPhoto {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    display: none;
-    width: 50%;
-    height: 50%;
-    color: #fff;
-    text-align: center;
-    line-height: 60px;
-    text-transform: uppercase;
-    background-color: rgba(0,0,0,.3);
-    border-radius: 50px;
-    cursor: pointer;
+
+.be-ava-comment {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
 }
-.custom-input-file:hover .uploadPhoto { display: block; }
+
+.be-comment-content {
+  margin-left: 80px;
+}
+
+.be-comment-content span {
+  display: inline-block;
+  width: 49%;
+  margin-bottom: 15px;
+}
+
+.be-comment-name {
+  font-size: 13px;
+  font-family: 'Conv_helveticaneuecyr-bold';
+}
+
+.be-comment-content a {
+  color: #383b43;
+}
+
+.be-comment-content span {
+  display: inline-block;
+  width: 49%;
+  margin-bottom: 15px;
+}
+
+.be-comment-time {
+  text-align: right;
+}
+
+.be-comment-time {
+  font-size: 11px;
+  color: #b4b7c1;
+}
+
+.be-comment-text {
+  font-size: 13px;
+  line-height: 18px;
+  color: #7a8192;
+  display: block;
+  background: #f6f6f7;
+  border: 1px solid #edeff2;
+  padding: 15px 20px 20px 20px;
+}
+
+
+form {
+  border: 1px solid #7a8192;
+  padding: 15px;
+}
+
+
+
