--- a/fuchion/src/app/menuitems/menuitems.component.html
+++ b/fuchion/src/app/menuitems/menuitems.component.html
@@ -45,7 +45,7 @@
 -->
 
 
-  <div class="card "  *ngFor="let food of foods">
+  <div class="card "  *ngFor="let food of foods" routerLink="['/dishdetail',food.id]">
     <img class="card-img-top" src="{{food.mainImage}}" alt="{{food.name}}">
     <div class="card-body text-center align-self-center">
       <h5 class="card-title">{{food.name}}</h5>
