--- a/fuchion/src/app/fooddetail/fooddetail.component.css
+++ b/fuchion/src/app/fooddetail/fooddetail.component.css
@@ -17,181 +17,6 @@ padding: 40px;
       width:100%;
       height: 30vw;
   }
-  .card {
-    margin: 0 auto;
-    }
-
-
-    a {
-      color: #000
-    }
-
-    .card0 {
-      box-shadow: 0px 4px 8px 0px #757575;
-      border-radius: 0px;
-    }
-
-
-
-    .card1 {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-
-
-    .card2 {
-      border-bottom-right-radius: 0px;
-      border-top-right-radius: 0px
-    }
-
-    .card-0 {
-      color: #311B92;
-      background-color: #fff;
-      border-radius: 0px;
-      min-height: 700px;
-      margin-top: 0px;
-      padding: 0px
-    }
-
-    .row-contents {
-      padding: 5px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .carousel-indicators {
-      position: absolute;
-      bottom: -100px;
-      display: -webkit-box !important;
-      align-self: center;
-    }
-
-    .carousel-indicators li {
-      cursor: pointer;
-      border-radius: 50% !important;
-      width: 40px !important;
-      height: 40px !important;
-      opacity: 0.5;
-      margin-right: auto;
-      margin-left: auto;
-      align-self: center;
-      text-align: center;
-      background-color: black;
-      object-fit: cover;
-    }
-
-    .carousel-indicators li.active {
-      opacity: 1;
-      width: 50px !important;
-      height: 50px !important;
-      margin-bottom: 0px !important;
-      border: 2px solid #fff
-    }
-
-
-    .list-images {
-      width: 100%;
-      height: 12vw;
-      object-fit: cover;
-      border: 1px solid black;
-    }
-
-    .media {
-      width : 100%;
-      padding: 15px;
-      margin : 0px;
-      text-align: start;
-    }
-
-    .media img {
-      width : 100px;
-      height: 100px;
-    }
-
-
-    body{
-      margin-top:20px;
-      background-color:#e9ebee;
-    }
-
-    .be-comment-block {
-      margin-bottom: 50px !important;
-      border: 1px solid #edeff2;
-      border-radius: 2px;
-      padding: 50px 70px;
-      border:1px solid #ffffff;
-    }
-
-    .comments-title {
-      font-size: 16px;
-      color: #262626;
-      margin-bottom: 15px;
-      font-family: 'Conv_helveticaneuecyr-bold';
-    }
-
-    .be-img-comment {
-      width: 60px;
-      height: 60px;
-      float: left;
-      margin-bottom: 15px;
-    }
-
-    .be-ava-comment {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-    }
-
-    .be-comment-content {
-      margin-left: 80px;
-    }
-
-    .be-comment-content span {
-      display: inline-block;
-      width: 49%;
-      margin-bottom: 15px;
-    }
-
-    .be-comment-name {
-      font-size: 13px;
-      font-family: 'Conv_helveticaneuecyr-bold';
-    }
-
-    .be-comment-content a {
-      color: #383b43;
-    }
-
-    .be-comment-content span {
-      display: inline-block;
-      width: 49%;
-      margin-bottom: 15px;
-    }
-
-    .be-comment-time {
-      text-align: right;
-    }
-
-    .be-comment-time {
-      font-size: 11px;
-      color: #b4b7c1;
-    }
-
-    .be-comment-text {
-      font-size: 13px;
-      line-height: 18px;
-      color: #7a8192;
-      display: block;
-      background: #f6f6f7;
-      border: 1px solid #edeff2;
-      padding: 15px 20px 20px 20px;
-    }
-
-
-    form {
-      border: 1px solid #7a8192;
-      padding: 15px;
-    }
 
 
 }
@@ -201,49 +26,6 @@ padding: 40px;
       width:100%;
       height: 30vw;
   }
-  .card {
-    margin: 0 auto;
-    }
-
-
-    a {
-      color: #000
-    }
-
-    .card0 {
-      box-shadow: 0px 4px 8px 0px #757575;
-      border-radius: 0px;
-    }
-
-
-
-    .card1 {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-
-
-    .card2 {
-      border-bottom-right-radius: 0px;
-      border-top-right-radius: 0px
-    }
-
-    .card-0 {
-      color: #311B92;
-      background-color: #fff;
-      border-radius: 0px;
-      min-height: 700px;
-      margin-top: 0px;
-      padding: 0px
-    }
-
-    .row-contents {
-      padding: 5px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
 }
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -251,188 +33,7 @@ padding: 40px;
       width:100%;
       height: 40vw;
   }
-  .card {
-    margin: 3px;
-    align-self: center;
-    }
 
-
-    a {
-      color: #000
-    }
-
-    .card0 {
-      box-shadow: 0px 4px 8px 0px #757575;
-      border-radius: 20px;
-    }
-
-
-
-    .card1 {
-      padding-left: 13%;
-      padding-right: 13%
-    }
-
-
-
-    .card2 {
-      border-bottom-right-radius: 20px;
-      border-top-right-radius: 20px
-    }
-
-
-
-
-
-
-
-    .card-0 {
-      color: #311B92;
-      background-color: #fff;
-      border-radius: 20px;
-      min-height: 352px;
-      margin-top: 80px;
-      padding: 30px
-    }
-
-    .row-contents {
-      padding: 50px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .carousel-indicators {
-      position: absolute;
-      bottom: -100px;
-      display: -webkit-box !important;
-      align-self: center;
-    }
-
-    .carousel-indicators li {
-      cursor: pointer;
-      border-radius: 50% !important;
-      width: 40px !important;
-      height: 40px !important;
-      opacity: 0.5;
-      margin-right: auto;
-      margin-left: auto;
-      align-self: center;
-      text-align: center;
-      background-color: black;
-      object-fit: cover;
-    }
-
-    .carousel-indicators li.active {
-      opacity: 1;
-      width: 50px !important;
-      height: 50px !important;
-      margin-bottom: 0px !important;
-      border: 2px solid #fff
-    }
-
-
-    .list-images {
-      width: 100%;
-      height: 12vw;
-      object-fit: cover;
-      border: 1px solid black;
-    }
-
-    .media {
-      width : 100%;
-      padding: 15px;
-      margin : 0px;
-      text-align: start;
-    }
-
-    .media img {
-      width : 100px;
-      height: 100px;
-    }
-
-
-    body{
-      margin-top:20px;
-      background-color:#e9ebee;
-    }
-
-    .be-comment-block {
-      margin-bottom: 50px !important;
-      border: 1px solid #edeff2;
-      border-radius: 2px;
-      padding: 50px 70px;
-      border:1px solid #ffffff;
-    }
-
-    .comments-title {
-      font-size: 16px;
-      color: #262626;
-      margin-bottom: 15px;
-      font-family: 'Conv_helveticaneuecyr-bold';
-    }
-
-    .be-img-comment {
-      width: 60px;
-      height: 60px;
-      float: left;
-      margin-bottom: 15px;
-    }
-
-    .be-ava-comment {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-    }
-
-    .be-comment-content {
-      margin-left: 80px;
-    }
-
-    .be-comment-content span {
-      display: inline-block;
-      width: 49%;
-      margin-bottom: 15px;
-    }
-
-    .be-comment-name {
-      font-size: 13px;
-      font-family: 'Conv_helveticaneuecyr-bold';
-    }
-
-    .be-comment-content a {
-      color: #383b43;
-    }
-
-    .be-comment-content span {
-      display: inline-block;
-      width: 49%;
-      margin-bottom: 15px;
-    }
-
-    .be-comment-time {
-      text-align: right;
-    }
-
-    .be-comment-time {
-      font-size: 11px;
-      color: #b4b7c1;
-    }
-
-    .be-comment-text {
-      font-size: 13px;
-      line-height: 18px;
-      color: #7a8192;
-      display: block;
-      background: #f6f6f7;
-      border: 1px solid #edeff2;
-      padding: 15px 20px 20px 20px;
-    }
-
-
-    form {
-      border: 1px solid #7a8192;
-      padding: 15px;
-    }
 
 }
 /* Extra large devices (large desktops, 1200px and up) */
@@ -441,197 +42,17 @@ padding: 40px;
       width:100%;
       height: 40vw;
   }
-  .card {
-    margin: 3px;
-    align-self: center;
-    }
-
-
-    a {
-      color: #000
-    }
-
-    .card0 {
-      box-shadow: 0px 4px 8px 0px #757575;
-      border-radius: 20px;
-    }
-
-
-
-    .card1 {
-      padding-left: 13%;
-      padding-right: 13%
-    }
-
-
-
-    .card2 {
-      border-bottom-right-radius: 20px;
-      border-top-right-radius: 20px
-    }
-
-
-
-
-
-
-
-    .card-0 {
-      color: #311B92;
-      background-color: #fff;
-      border-radius: 20px;
-      min-height: 352px;
-      margin-top: 80px;
-      padding: 30px
-    }
-
-    .row-contents {
-      padding: 50px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .carousel-indicators {
-      position: absolute;
-      bottom: -100px;
-      display: -webkit-box !important;
-      align-self: center;
-    }
-
-    .carousel-indicators li {
-      cursor: pointer;
-      border-radius: 50% !important;
-      width: 40px !important;
-      height: 40px !important;
-      opacity: 0.5;
-      margin-right: auto;
-      margin-left: auto;
-      align-self: center;
-      text-align: center;
-      background-color: black;
-      object-fit: cover;
-    }
-
-    .carousel-indicators li.active {
-      opacity: 1;
-      width: 50px !important;
-      height: 50px !important;
-      margin-bottom: 0px !important;
-      border: 2px solid #fff
-    }
-
-
-    .list-images {
-      width: 100%;
-      height: 12vw;
-      object-fit: cover;
-      border: 1px solid black;
-    }
-
-    .media {
-      width : 100%;
-      padding: 15px;
-      margin : 0px;
-      text-align: start;
-    }
-
-    .media img {
-      width : 100px;
-      height: 100px;
-    }
-
-
-    body{
-      margin-top:20px;
-      background-color:#e9ebee;
-    }
-
-    .be-comment-block {
-      margin-bottom: 50px !important;
-      border: 1px solid #edeff2;
-      border-radius: 2px;
-      padding: 50px 70px;
-      border:1px solid #ffffff;
-    }
-
-    .comments-title {
-      font-size: 16px;
-      color: #262626;
-      margin-bottom: 15px;
-      font-family: 'Conv_helveticaneuecyr-bold';
-    }
-
-    .be-img-comment {
-      width: 60px;
-      height: 60px;
-      float: left;
-      margin-bottom: 15px;
-    }
-
-    .be-ava-comment {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-    }
-
-    .be-comment-content {
-      margin-left: 80px;
-    }
-
-    .be-comment-content span {
-      display: inline-block;
-      width: 49%;
-      margin-bottom: 15px;
-    }
-
-    .be-comment-name {
-      font-size: 13px;
-      font-family: 'Conv_helveticaneuecyr-bold';
-    }
-
-    .be-comment-content a {
-      color: #383b43;
-    }
-
-    .be-comment-content span {
-      display: inline-block;
-      width: 49%;
-      margin-bottom: 15px;
-    }
-
-    .be-comment-time {
-      text-align: right;
-    }
-
-    .be-comment-time {
-      font-size: 11px;
-      color: #b4b7c1;
-    }
-
-    .be-comment-text {
-      font-size: 13px;
-      line-height: 18px;
-      color: #7a8192;
-      display: block;
-      background: #f6f6f7;
-      border: 1px solid #edeff2;
-      padding: 15px 20px 20px 20px;
-    }
-
-
-    form {
-      border: 1px solid #7a8192;
-      padding: 15px;
-    }
 
 }
 
 
-.card {
-margin: 3px;
-align-self: center;
+body {
+  color: #000;
+  overflow-x: hidden;
+  height: 100%;
+  background-color: #EEEEEE;
+  background-repeat: no-repeat
 }
-
 
 a {
   color: #000
@@ -642,33 +63,20 @@ a {
   border-radius: 20px;
 }
 
-
-
 .card1 {
   padding-left: 13%;
   padding-right: 13%
 }
 
-
+.logo {
+  margin-top: 30px;
+  margin-left: 15px;
+  cursor: pointer
+}
 
 .card2 {
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px
-}
-
-
-
-
-
-
-
-.card-0 {
-  color: #311B92;
-  background-color: #fff;
-  border-radius: 20px;
-  min-height: 352px;
-  margin-top: 80px;
-  padding: 30px
 }
 
 .row-contents {
@@ -677,42 +85,7 @@ a {
   text-align: center;
 }
 
-.carousel-indicators {
-  position: absolute;
-  bottom: -100px;
-  display: -webkit-box !important;
-  align-self: center;
-}
 
-.carousel-indicators li {
-  cursor: pointer;
-  border-radius: 50% !important;
-  width: 40px !important;
-  height: 40px !important;
-  opacity: 0.5;
-  margin-right: auto;
-  margin-left: auto;
-  align-self: center;
-  text-align: center;
-  background-color: black;
-  object-fit: cover;
-}
-
-.carousel-indicators li.active {
-  opacity: 1;
-  width: 50px !important;
-  height: 50px !important;
-  margin-bottom: 0px !important;
-  border: 2px solid #fff
-}
-
-
-.list-images {
-  width: 100%;
-  height: 12vw;
-  object-fit: cover;
-  border: 1px solid black;
-}
 
 .media {
   width : 100%;
