--- a/fuchion/src/app/fooddetail/fooddetail.component.html
+++ b/fuchion/src/app/fooddetail/fooddetail.component.html
@@ -1,15 +1,20 @@
-<div class="container-fluid">
+<div class="container-fluid"  data-aos="fade-down">
   <div class="row row-contents">
     <div class="col-12">
       <h1>DISH DETAILS</h1>
 
     </div>
-    <div class="col-md-12" *ngIf="food">
-      <div class="card card0 border-0 row-contents">
-        <div class="card1 pb-9 row">
-        <div class="col-12">
-      <div class="card" >
-        <img class="card-img-top" src="{{mainImage}}"   alt="Card image cap">
+    <div class="container-fluid px-2 px-md-4 py-5 mx-auto">
+      <div class="card card0 border-0">
+          <div class="row d-flex">
+              <div class="col-12">
+                  <div class="card1 pb-5">
+                      <div class="row px-3">
+                      </div>
+                      <div class="row px-3 justify-content-center mt-4 mb-5 row-contents" >
+
+      <div class="card" *ngIf="food">
+        <img class="card-img-top" src="{{mainImage}}"   alt="Card image cap" data-aos="fade-right">
         <div class="card-body text-center align-self-center">
           <h3 class="card-title">{{food.name}}</h3>
           <h5 class="card-title">{{food.price}}</h5>
@@ -28,21 +33,18 @@
 
   </div>
 </div>
-<div class="col-md-12" *ngIf="!loaded">
-  <div class="text-center">
-    <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
-</div>
+
 </div>
 
+
+</div>
+</div>
 </div>
 
 <div class="container-fluid">
   <div class="be-comment-block">
-    <h1 class="comments-title">Comments ({{food.comments.length}})</h1>
-    <div class="be-comment" *ngFor="let comment of food.comments">
+    <h1 class="comments-title" *ngIf="comments">Comments ({{comments.length}})</h1>
+    <div class="be-comment" *ngFor="let comment of comments" data-aos="fade-up">
       <div class="be-img-comment">
         <a href="blog-detail-2.html">
           <img src="assets/img/restorant-logo.png" alt="" class="be-ava-comment">
